--- a/arch.html
+++ b/arch.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Architect</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="accordion-item-who-we-are.css">
+    
     <link rel="icon" type="image/png"
         href="//res2.weblium.site/res/5dcebb6eb2b1b00022337fd8/5dd2d5b74208ed00223f7896_optimized" sizes="16x16">
-
 
     <link href=" https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
@@ -19,6 +22,7 @@
     <link rel="stylesheet" href="arch.css">
     <link rel="stylesheet" href="banner-after-menu.css">
     <link rel="stylesheet" href="who-we-are.css">
+
 </head>
 
 <body class="visible">
@@ -265,6 +269,65 @@
                                         <span class="just-text">Who We Are</span>
                                     </span>
                                 </p>
+                                <p class="title-who">
+                                    <span class="box-title-who">
+                                        <span class="text-title-who">A Team of Architects and Designers.</span>
+                                    </span>
+                                </p>
+                                <p class="subtitle-who">
+                                    <span class="box-subtitle-who">
+                                        <span class="text-subtitle-who">We have vast experience in design projects and
+                                            engineering. Thus, you can be sure you get a stunning result within your
+                                            budget.</span>
+                                    </span>
+                                </p>
+                                <div class="accordion accordion-flush" id="accordionFlushExample">
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="flush-headingOne">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+                                                aria-expanded="false" aria-controls="flush-collapseOne">
+                                                What projects do you implement?
+                                            </button>
+                                        </h2>
+                                        <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                            <div class="accordion-body">We work both with commercial and private orders.
+                                                We create and implement design projects of private houses, hotels,
+                                                restaurants, cottages, premises in any institutions.</div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="flush-headingTwo">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo"
+                                                aria-expanded="false" aria-controls="flush-collapseTwo">
+                                                Do you provide construction management? </button>
+                                        </h2>
+                                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                            aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                            <div class="accordion-body">Yes, we coordinate and supervise a variety of
+                                                projects, including the building of all types of residential,
+                                                commercial, and industrial objects. </div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="flush-headingThree">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
+                                                aria-expanded="false" aria-controls="flush-collapseThree">
+                                                How can I request any of the services? </button>
+                                        </h2>
+                                        <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                            aria-labelledby="flush-headingThree"
+                                            data-bs-parent="#accordionFlushExample">
+                                            <div class="accordion-body">You can fill out our contact form on this
+                                                website, or contact us directly via phone or email. Our dedicated
+                                                specialist will answer any of your questions and tell about the design
+                                                process. </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -277,6 +340,9 @@
     <footer>
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
