correcting burger menu

--- a/arch.html
+++ b/arch.html
@@ -27,7 +27,66 @@
 
 <body class="visible">
     <header>
-        <div class="block-logo">
+        <div class="container-navbar">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <div class="block-section-menu">
+                        <a href="#">
+                            <p>
+                                <span class="logo-text">ARCH</span><span class="red-dot">.</span>
+                            </p>
+                        </a>
+                    </div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+
+                            <div class="block-section-menu">
+
+                                <a class="section-menu" href="#burgerabout">
+                                    <p class="text-style-header">Services</p>
+                                </a><br>
+                                <a class="section-menu" href="#burgermss">
+                                    <p class="text-style-header">About us</p>
+                                </a><br>
+                                <a class="section-menu" href="#maincoll">
+                                    <p class="text-style-header">Projects</p>
+                                </a>
+                                <a class="section-menu" href="#burgerblog">
+                                    <p class="text-style-header">Testimonialss</p>
+                                </a>
+                                <a class="section-menu" href="#burgerblog">
+                                    <p class="text-style-header">Pricing</p>
+                                </a>
+                                <a class="section-menu" href="#">
+                                    <p class="text-style-header">Contact us.</p>
+                                </a><br>
+                            </div>
+                            <div class="right-icons">
+                                <li class="icon-menu">
+                                    <a href="https://www.facebook.com"><img class="social-icons"
+                                            src="img/facebook-icon-red.svg" alt="Facebook Icon" width="100"></a>
+                                </li>
+                                <li class="icon-menu">
+                                    <a href="https://www.instagram.com"><img class="social-icons"
+                                            src="img/instagram-icon-red.svg" alt="Instagtam Icon" width="100"></a>
+                                </li>
+                                <li class="icon-menu">
+                                    <a href="https://www.youtube.com"><img class="social-icons"
+                                            src="img/youtube-icon-red.svg" alt="YouTube Icon" width="100"></a>
+                                </li>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <!-- <div class="block-logo">
             <div class="block-logo-inner">
                 <div class="logo-flex">
                     <div class="sec-left-logo">
@@ -82,25 +141,25 @@
                     <div class="sec-right-logo">
                         <div class="sec-right-logo-inner">
                             <div class="social-icons">
-                                <!-- <a href="www.facebook.com"> -->
+                                <a href="www.facebook.com"> 
                                 <img src="img/facebook-icon-red.svg" alt="facebook icon"></img>
-                                <!-- </a> -->
+                                </a> 
                             </div>
                             <div class="social-icons">
-                                <!-- <a href="www.instagram.com"> -->
+                                 <a href="www.instagram.com"> 
                                 <img src="img/instagram-icon-red.svg" alt="instagram icon"></img>
-                                <!-- </a> -->
+                                </a>
                             </div>
                             <div class="social-icons">
-                                <!-- <a href="www.youtube.com"> -->
+                                <a href="www.youtube.com"> 
                                 <img src="img/youtube-icon-red.svg" alt="youtube icon"></img>
-                                <!-- </a> -->
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <section class="banner-after-menu">
             <div class="cont-section-inner">
                 <header class="banner-sec">
@@ -154,16 +213,14 @@
                                     <img src="img/house-red.svg" alt="icon red house"></img>
                                 </div>
                             </div>
-                            <p class="titel-2">
-                                <span class="box-title-2">
-                                    <span class="text-title-2">
-                                        Architecture
+                            <div class="line-after-red">
+                                <p class="titel-2">
+                                    <span class="box-title-2">
+                                        <span class="text-title-2">
+                                            Architecture
+                                        </span>
                                     </span>
-                                </span>
-                            </p>
-                            <div class="box-red-line">
-                                <div class="red-line">
-                                </div>
+                                </p>
                             </div>
                             <span class="box-subtitle-title-2">
                                 <span class="text-subtitle-title-2"> Every architecture design project is a
@@ -174,14 +231,12 @@
                             </span>
                             <div class="group-learn">
                                 <div class="btn-group-inner">
-
                                     <a href="#"><button class="button learn"><span class="arrow"><img
                                                     src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                     <div class="collection-inner-block">
                         <div class="content-grid">
                             <div class="item-group">
@@ -189,16 +244,14 @@
                                     <img src="img/plan.svg" alt="icon plan"></img>
                                 </div>
                             </div>
-                            <p class="titel-2">
-                                <span class="box-title-2">
-                                    <span class="text-title-2">
-                                        Exterior Design
+                            <div class="line-after-red">
+                                <p class="titel-2">
+                                    <span class="box-title-2">
+                                        <span class="text-title-2">
+                                            Exterior Design
+                                        </span>
                                     </span>
-                                </span>
-                            </p>
-                            <div class="box-red-line">
-                                <div class="red-line">
-                                </div>
+                                </p>
                             </div>
                             <span class="box-subtitle-title-2">
                                 <span class="text-subtitle-title-2"> We give your office and homes the most
@@ -213,7 +266,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="collection-inner-block-end">
                         <div class="content-grid">
                             <div class="item-group">
@@ -221,16 +273,14 @@
                                     <img src="img/ruler.svg" alt="icon ruler"></img>
                                 </div>
                             </div>
-                            <p class="titel-2">
-                                <span class="box-title-2">
-                                    <span class="text-title-2">
-                                        Interior Design
+                            <div class="line-after-red">
+                                <p class="titel-2">
+                                    <span class="box-title-2">
+                                        <span class="text-title-2">
+                                            Interior Design
+                                        </span>
                                     </span>
-                                </span>
-                            </p>
-                            <div class="box-red-line">
-                                <div class="red-line">
-                                </div>
+                                </p>
                             </div>
                             <span class="box-subtitle-title-2">
                                 <span class="text-subtitle-title-2"> From bedrooms to conference halls, we offer you
@@ -264,11 +314,13 @@
                         </div>
                         <div class="item-who-middle">
                             <div class="box-who-middle">
-                                <p class="before-sub">
-                                    <span class="box-before-sub">
-                                        <span class="just-text">Who We Are</span>
-                                    </span>
-                                </p>
+                                <div class="line-after-red">
+                                    <p class="before-sub">
+                                        <span class="box-before-sub">
+                                            <span class="just-text">Who We Are</span>
+                                        </span>
+                                    </p>
+                                </div>
                                 <p class="title-who">
                                     <span class="box-title-who">
                                         <span class="text-title-who">A Team of Architects and Designers.</span>
@@ -284,7 +336,7 @@
                                 <div class="accordion accordion-flush" id="accordionFlushExample">
                                     <div class="accordion-item">
                                         <h2 class="accordion-header" id="flush-headingOne">
-                                            <button class="accordion-button collapsed" type="button"
+                                            <button id="text" class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
                                                 aria-expanded="false" aria-controls="flush-collapseOne">
                                                 What projects do you implement?
@@ -292,28 +344,30 @@
                                         </h2>
                                         <div id="flush-collapseOne" class="accordion-collapse collapse"
                                             aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                            <div class="accordion-body">We work both with commercial and private orders.
+                                            <div id="text-sub-accord" class="accordion-body">We work both with
+                                                commercial and private orders.
                                                 We create and implement design projects of private houses, hotels,
                                                 restaurants, cottages, premises in any institutions.</div>
                                         </div>
                                     </div>
                                     <div class="accordion-item">
                                         <h2 class="accordion-header" id="flush-headingTwo">
-                                            <button class="accordion-button collapsed" type="button"
+                                            <button id="text" class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo"
                                                 aria-expanded="false" aria-controls="flush-collapseTwo">
                                                 Do you provide construction management? </button>
                                         </h2>
                                         <div id="flush-collapseTwo" class="accordion-collapse collapse"
                                             aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                                            <div class="accordion-body">Yes, we coordinate and supervise a variety of
+                                            <div id="text-sub-accord" class="accordion-body">Yes, we coordinate and
+                                                supervise a variety of
                                                 projects, including the building of all types of residential,
                                                 commercial, and industrial objects. </div>
                                         </div>
                                     </div>
                                     <div class="accordion-item">
                                         <h2 class="accordion-header" id="flush-headingThree">
-                                            <button class="accordion-button collapsed" type="button"
+                                            <button id="text" class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
                                                 aria-expanded="false" aria-controls="flush-collapseThree">
                                                 How can I request any of the services? </button>
@@ -321,7 +375,8 @@
                                         <div id="flush-collapseThree" class="accordion-collapse collapse"
                                             aria-labelledby="flush-headingThree"
                                             data-bs-parent="#accordionFlushExample">
-                                            <div class="accordion-body">You can fill out our contact form on this
+                                            <div id="text-sub-accord" class="accordion-body">You can fill out our
+                                                contact form on this
                                                 website, or contact us directly via phone or email. Our dedicated
                                                 specialist will answer any of your questions and tell about the design
                                                 process. </div>
