add section porfolio

--- a/index.html
+++ b/index.html
@@ -400,7 +400,93 @@
         </div>
     </section> <!-- </main> -->
     <section class="porfolio">
-
+        <div class="section-portfolio-inner">
+            <header class="portfolio">
+                <div class="portfolio-grid-box">
+                    <div class="portfolio-grid-box-inner">
+                        <div class="portfolio-header-grid-item">
+                            <div class="portfolio-item-inner">
+                                <div class="line-after-red">
+                                    <p>
+                                        <span class="name-section-portfolio">
+                                            Portfolio
+                                        </span>
+                                    </p>
+                                </div>
+                                <div class="title-portfolio">
+                                    <p>
+                                        <span class="text-title-portfolio">
+                                            Interior & Exterior Projects
+                                        </span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <div class="cards-portfolio">
+                <div class="box-cards-portfolio">
+                    <div class="box-cards-inner">
+                        <div class="item-portfolio-box">
+                            <div class="item-portfo-inner">
+                                <div class="picture-item-portfo">
+                                    <picture class="image-of-item">
+                                        <img class="style-image-of-card" src="img/house-a.webp" alt="house">
+                                    </picture>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item-portfolio-box">
+                            <div class="item-portfo-inner">
+                                <div class="picture-item-portfo">
+                                    <picture class="image-of-item">
+                                        <img class="style-image-of-card" src="img/house-b.webp" alt="house">
+                                    </picture>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item-portfolio-box">
+                            <div class="item-portfo-inner">
+                                <div class="picture-item-portfo">
+                                    <picture class="image-of-item">
+                                        <img class="style-image-of-card" class="house-c"
+                                            src="img/house-c.webp" alt="house">
+                                    </picture>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item-portfolio-box">
+                            <div class="item-portfo-inner">
+                                <div class="picture-item-portfo">
+                                    <picture class="image-of-item">
+                                        <img class="style-image-of-card" src="img/house-d.webp" alt="house">
+                                    </picture>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item-portfolio-box">
+                            <div class="item-portfo-inner">
+                                <div class="picture-item-portfo">
+                                    <picture class="image-of-item">
+                                        <img class="style-image-of-card" src="img/house-e.webp" alt="house">
+                                    </picture>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item-portfolio-box">
+                            <div class="item-portfo-inner">
+                                <div class="picture-item-portfo">
+                                    <picture class="image-of-item">
+                                        <img class="style-image-of-card" src="img/house-f.webp" alt="house">
+                                    </picture>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
 
