--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="banner-after-menu.css">
     <link rel="stylesheet" href="who-we-are.css">
     <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="mission.css">
+    <link rel="stylesheet" href="inspired.css">
 
 </head>
 
@@ -401,21 +403,21 @@
     </section> <!-- </main> -->
     <section class="porfolio">
         <div class="section-portfolio-inner">
-            <header class="portfolio">
-                <div class="portfolio-grid-box">
-                    <div class="portfolio-grid-box-inner">
-                        <div class="portfolio-header-grid-item">
-                            <div class="portfolio-item-inner">
+            <header class="header-block">
+                <div class="header-grid-box">
+                    <div class="header-grid-box-inner">
+                        <div class="header-grid-item">
+                            <div class="header-item-inner">
                                 <div class="line-after-red">
                                     <p>
-                                        <span class="name-section-portfolio">
+                                        <span class="name-section">
                                             Portfolio
                                         </span>
                                     </p>
                                 </div>
-                                <div class="title-portfolio">
+                                <div class="title-block">
                                     <p>
-                                        <span class="text-title-portfolio">
+                                        <span class="text-title">
                                             Interior & Exterior Projects
                                         </span>
                                     </p>
@@ -450,8 +452,7 @@
                             <div class="item-portfo-inner">
                                 <div class="picture-item-portfo">
                                     <picture class="image-of-item">
-                                        <img class="style-image-of-card" class="house-c"
-                                            src="img/house-c.webp" alt="house">
+                                        <img class="style-image-of-card" src="img/house-c.webp" alt="house">
                                     </picture>
                                 </div>
                             </div>
@@ -480,6 +481,171 @@
                                     <picture class="image-of-item">
                                         <img class="style-image-of-card" src="img/house-f.webp" alt="house">
                                     </picture>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="mission">
+        <div class="mission-inner">
+            <header class="header-mission">
+                <div class="grid-header-mission">
+                    <div class="box-mission">
+                        <div class="grid-content-mission">
+                            <div class="inner-content-mission">
+                                <div class="line-after-red">
+                                    <p>
+                                        <span class="name-section">
+                                            Our Mission
+                                        </span>
+                                    </p>
+                                </div>
+                                <div class="title-block">
+                                    <p>
+                                        <span class="text-title-mission">
+                                            Being focused on luxury and practicality, we turn<br> <span
+                                                class="red-text">ideas</span> into <span class="red-text">life</span>.
+                                            Our
+                                            priority is to deliver<br> aesthetically pleasing and functional solutions.
+                                        </span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+        </div>
+    </section>
+    <section class="inspired">
+        <div class="section-inner-inspired">
+            <header class="header-block">
+                <div class="header-grid-box">
+                    <div class="header-grid-box-inner">
+                        <div class="header-grid-item">
+                            <div class="portfolio-item-inner">
+                                <div class="line-after-red">
+                                    <p>
+                                        <span class="name-section">
+                                            Get Inspired
+                                        </span>
+                                    </p>
+                                </div>
+                                <div class="title-block">
+                                    <p>
+                                        <span class="text-title">
+                                            See Our Latest Works
+                                        </span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <div class="content-inspired">
+                <div class="cont-section-inner-collection-inspired">
+                    <div class="box-section-ins">
+                        <div class="box-section-3-items-inspired">
+                            <div class="collection-inner-block-ins">
+                                <div class="content-grid">
+                                    <div class="picture-item-inspired">
+                                        <picture class="item-inspired">
+                                            <img class="style-image-of-card" src="img/lux-villa.webp"
+                                                alt="lux villa"></img>
+                                        </picture>
+                                    </div>
+                                    <div class="line-after-red">
+                                        <p class="titel-2">
+                                            <span class="box-title-2">
+                                                <span class="text-title-2">
+                                                    Architecture
+                                                </span>
+                                            </span>
+                                        </p>
+                                    </div>
+                                    <span class="box-subtitle-title-2">
+                                        <span class="text-subtitle-title-2"> Every architecture design project is a
+                                            challenge
+                                            that
+                                            we accept eagerly. Take a
+                                            closer look at our top projects.</span>
+                                    </span>
+                                    <div class="group-learn">
+                                        <div class="btn-group-inner">
+                                            <a href="#"><button class="button learn"> Featured in
+                                                    Dezeen</button></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="collection-inner-block-ins">
+                                <div class="content-grid">
+                                    <div class="picture-item-inspired">
+                                        <picture class="item-inspired">
+                                            <img class="style-image-of-card" src="img/bali-resort.webp"
+                                                alt="bali resort"></img>
+                                        </picture>
+                                    </div>
+                                    <div class="group-captions">
+                                        <span class="text-offer-group">
+                                            <span class="text-offer-red">
+                                                   Exterior
+                                            </span>
+                                        </span>
+                                    </div>
+                                    <div class="group-captions">
+                                        <span class="text-offer-group">
+                                            <span class="text-offer-red">
+                                                Exterior
+                                            </span>
+                                        </span>
+                                    </div>
+                                    <span class="box-subtitle-title-2">
+                                        <span class="text-subtitle-title-2"> We give your office and homes the most
+                                            attractive look, improving the functionality of your property by optimizing
+                                            the
+                                            space. </span>
+                                    </span>
+                                    <div class="group-learn">
+                                        <div class="btn-group-inner">
+                                            <a href="#"><button class="button learn">Featured in
+                                                    Dezeen</button></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="collection-inner-block-ins">
+                                <div class="content-grid">
+                                    <div class="picture-item-inspired">
+                                        <picture class="item-inspired">
+                                            <img class="style-image-of-card" src="img/large-mansion.webp"
+                                                alt="Los angeles"></img>
+                                        </picture>
+                                    </div>
+                                    <div class="line-after-red">
+                                        <p class="titel-2">
+                                            <span class="box-title-2">
+                                                <span class="text-title-2">
+                                                    Interior Design
+                                                </span>
+                                            </span>
+                                        </p>
+                                    </div>
+                                    <span class="box-subtitle-title-2">
+                                        <span class="text-subtitle-title-2"> From bedrooms to conference halls, we offer
+                                            you
+                                            our professional vision of modern and comfortable premises. </span>
+                                    </span>
+                                    <div class="group-learn">
+                                        <div class="btn-group-inner">
+                                            <a href="#"><button class="button learn">Featured in
+                                                            Dezeen</button></a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
